--- a/asaas_theme/public/css/header.css
+++ b/asaas_theme/public/css/header.css
@@ -154,3 +154,17 @@ header .navbar .form-group-sm .form-control{
 #navbar-breadcrumbs > li > a{
     padding: 0;
 }
+
+@media (max-width: 991px){
+    .page-head .page-title h1{
+        margin-top:6px;
+        font-size: 20px;
+    }
+    #navbar-breadcrumbs{
+        max-width:fit-content;
+    }
+
+    .dropdown-navbar-new-comments{
+        margin-top: 12px;
+    }
+}
